--- a/tictactoe/.env.example
+++ b/tictactoe/.env.example
@@ -1,3 +1,3 @@
+MONGODB_URI=mongodb+srv://tictactoe_user:YOUR_PASSWORD@cluster0.xxxxx.mongodb.net/tictactoe?retryWrites=true&w=majority
 NODE_ENV=development
 PORT=3000
-ALLOWED_ORIGINS=http://localhost:3000
