--- a/tictactoe/package.json
+++ b/tictactoe/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "mongoose": "^8.0.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
