--- a/tictactoe/.env.example
+++ b/tictactoe/.env.example
@@ -1,3 +1,8 @@
 MONGODB_URI=mongodb+srv://tictactoe_user:YOUR_PASSWORD@cluster0.xxxxx.mongodb.net/tictactoe?retryWrites=true&w=majority
 NODE_ENV=development
 PORT=3000
+
+# API Keys (if needed)
+# MODEL_API_KEY=your_api_key_here
+# AWS_ACCESS_KEY_ID=your_aws_key_here
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_here
