--- a/tictactoe/.env.example
+++ b/tictactoe/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://tictactoe_user:YOUR_PASSWORD@cluster0.xxxxx.mongodb.net/tictactoe?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://tictactoe_user:Iamraul@876@cluster0.xxxxx.mongodb.net/tictactoe?retryWrites=true&w=majority
 NODE_ENV=development
 PORT=3000
 
